--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,10 @@
     background-color: #9b59b6;
 }
 
+.bg-color-contact {
+    background-color: #ffffff;
+}
+
 .ul-menu-color-home {
     background-color: #e67e22;
 }
@@ -322,6 +326,28 @@ footer .cv-pdf i:hover {
     margin-bottom: 30px;
 }
 
+/*---------------------------------------------Contact*/
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;           /*0 auto --> centers text*/
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    background-color: #e84610;
+    color: #fafafa;
+}
+
 /*---------------------------------------------Media Queries*/
 
 @media (min-width: 992px) {
@@ -330,4 +356,12 @@ footer .cv-pdf i:hover {
         float: none;
         display: table-cell;
     }
+    
+    .center-form {                /* change the form sizes for Desktop */
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;           /*0 auto --> centers text*/
+        max-width: 50%;
+    }
 }
+
