--- a/assets/css/style_old.css
+++ b/assets/css/style_old.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto: 100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*--------------------------------------------Colors*/
 
-.bg-color-name-title {
+/*---------------------------------------------Colours*/
+.bg-color-name-title 
+{
     background-color: #676767;
 }
 
@@ -26,55 +27,26 @@
     background-color: #ffffff;
 }
 
-.bg-color-conferences {
-    background-color: #f4f4f4;
-}
-
-.bg-color-groups {
-    background-color: #ffffff;
-}
-
-.ui-menu-color-home {
+.ul-menu-color-home {
     background-color: #e67e22;
 }
 
-.ui-menu-color-resume {
+.ul-menu-color-resume {
     background-color: #9b59b6;
 }
 
-.ui-menu-color-contact {
+.ul-menu-color-contact {
     background-color: #3498db;
 }
 
-.ui-menu-color-download {
-    background-color: #d9a81d;
-}
-
-
-.ui-menu-color-github {
-    background-color: #1c4a6c;
-}
-
-.ui-menu-color-interests {
-    background-color: #e74c3c;
-}
-
-
-
-
-body {
-    font-family: Roboto, sans-serif;
-    font-weight: 300;
+.ul-menu-color-download {
     background-color: #525252;
-    color: #555555;
 }
-
-
-/*--------------------------------------------Special Paddings/Margins/Text*/
+/*---------------------------------------------Special padding/margins/text*/
 
 h1,
-h2,
-h3,
+h2, 
+h3, 
 h4 {
     margin: 0;
 }
@@ -93,7 +65,6 @@ h4 {
     display: inline-block;
 }
 
-
 .row-table {
     display: table;
 }
@@ -106,10 +77,8 @@ h4 {
     margin-bottom: 40px;
 }
 
-
-/*--------------------------------------------Heading*/
-
-header {
+/*---------------------------------------------Heading*/
+header{
     margin: 0;
 }
 
@@ -118,7 +87,7 @@ header {
 }
 
 .logo {
-    background: url("../images/rosie.jpg");
+    background: url("../images/logo.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -166,7 +135,6 @@ header {
     height: 120px;
 }
 
-
 .menuitem a i {
     padding-top: 22px;
     display: block;
@@ -185,8 +153,7 @@ header {
     letter-spacing: 2px;
 }
 
-
-/*--------------------------------------------Hover.css*/
+/*---------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
@@ -194,7 +161,7 @@ header {
 }
 
 
-/*--------------------------------------------Footer*/
+/*---------------------------------------------Footer*/
 
 footer {
     background-color: #525252;
@@ -213,7 +180,7 @@ footer .cv-pdf i {
 footer .cv-pdf i:hover {
     color: #e84610;
     transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
+    -mos-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
@@ -233,7 +200,7 @@ footer .cv-pdf i:hover {
     color: #fafafa;
     background: #8f8f8f;
     transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
+    -mos-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
@@ -246,7 +213,7 @@ footer .cv-pdf i:hover {
     margin: 20px;
 }
 
-/*--------------------------------------------Three Reasons*/
+/*---------------------------------------------Three reasons*/
 
 .three-reasons-icon {
     font-size: 26px;
@@ -257,7 +224,7 @@ footer .cv-pdf i:hover {
     margin-bottom: 15px;
 }
 
-/*--------------------------------------------Personal Info*/
+/*---------------------------------------------Personal Info*/
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -293,7 +260,7 @@ footer .cv-pdf i:hover {
     width: 60%;
 }
 
-/*--------------------------------------------Skills*/
+/*---------------------------------------------Skills*/
 
 .progress {
     position: relative;
@@ -306,17 +273,14 @@ footer .cv-pdf i:hover {
     font-weight: 400;
     padding: 3px 30px 2px 10px;
     color: #fafafa;
-    background-color: rgba(25, 25, 25, 0.2);
+    background-color: rgba(25,25,25, 0.2)
 }
-
 
 .progress-section {
     margin: 40px 20px;
 }
 
-
-/*--------------------------------------------Work History*/
-
+/*---------------------------------------------Work History*/
 .timeline-item {
     padding: 4em 2em 0em 2em;
     position: relative;
@@ -330,7 +294,7 @@ footer .cv-pdf i:hover {
 }
 
 .timeline-item::before {
-    content: attr(data-dates);
+    content: attr(dates);    /*Uses the dates attribute in the timeline-item*/
     position: absolute;
     left: 2.5em;
     top: 3em;
@@ -342,13 +306,13 @@ footer .cv-pdf i:hover {
     margin: 0;
 }
 
-.timeline-item::after {
+.timeline-item::after {      /*To put the circle on the timeline*/
     width: 12px;
     height: 12px;
     display: block;
     top: 2.4em;
     position: absolute;
-    left: -6px;
+    left: -6px;                /*-6px so that it is on the border*/
     border-radius: 12px;
     content: '';
     background: #fafafa;
@@ -356,14 +320,13 @@ footer .cv-pdf i:hover {
 
 .history-heading {
     color: #fafafa;
-    margin-bottom: 50px;
 }
 
 .history-items {
     margin-bottom: 30px;
 }
 
-/*--------------------------------------------Contact*/
+/*---------------------------------------------Contact*/
 
 .contact-heading {
     font-family: "Exo", sans-serif;
@@ -372,10 +335,9 @@ footer .cv-pdf i:hover {
     margin-bottom: 20px;
 }
 
-
 .center-form {
     padding-top: 10px;
-    margin: 0 auto;
+    margin: 0 auto;           /*0 auto --> centers text*/
     max-width: 70%;
 }
 
@@ -386,24 +348,20 @@ button[type="submit"] {
     color: #fafafa;
 }
 
-/*--------------------------------------------Map*/
-div#map {
-    min-height: 360px;
-}
+/*---------------------------------------------Media Queries*/
 
-/*--------------------------------------------Media Queries*/
-
-@media(min-width: 992px) {
+@media (min-width: 992px) {
     .section-column {
         padding: 0 30px 30px;
         float: none;
         display: table-cell;
     }
-
-    .center-form {
+    
+    .center-form {                /* change the form sizes for Desktop */
         padding-top: 30px;
         min-height: 240px;
-        margin: 0 auto;
+        margin: 0 auto;           /*0 auto --> centers text*/
         max-width: 50%;
     }
 }
+
